--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
                 android:id="@+id/activity_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
-    <com.tengio.android.indicators.IndicatorView android:id="@+id/indicator_view"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="wrap_content"/>
+    <android.support.v4.view.ViewPager android:id="@+id/main_view_pager"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="match_parent"/>
+
+    <com.tengio.android.indicators.CircleIndicator android:id="@+id/indicator_view"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="wrap_content"
+                                                   android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
